2003-08-17  Niklas Knutsson  <nq@altern.org>

	* More energy and pressure units
	* Some constants
	* Write variables to file with maximum precision
	* Show variable title in menu and tree
	* Unit expression conversion fixes
	* Make operators wrap selection in parenthesis instead of deleting it, thus they operate on the result after execute
	* Insert ^ directly instead of waiting for another key press.
	* Fix annoying repositioning of text cursor in n-bases dialog
	* Update conversion in units dialog after focus out event in entries
	* Remove empty parenthesis after zero argument functions
	* Fix disabling of units
	* Fix unclosed brackets
	* restrict abs() to numbers
	* Change Function::name(string), Unit::title(string), etc. to setTitle(), setName()

2003-08-16  Niklas Knutsson  <nq@altern.org>
	
	* Google style in expression conversion (ex. 5 m to ft = 16.4 ft)
	* Small unit conversion fix (1 km/1 kg => 1 km/kg).
	* More units.
	* Fix loading of alias unit that is defined before its base unit in file
	* Modify priotrity for calculations so that inexplicit multiplication is calculated before division (2/2(x) = 2/(2*x)) and functions (sin 2x(x) = sin (2x*x), but sin(2x)(x) is still sin(2x)*x)
	* Some restructuring
	* Unbreak brokeness from last fix
	* Move three small dialogs to Glade
	* Convert button

2003-08-15  Niklas Knutsson  <nq@altern.org>

	* Fix bracket madness breaking unbrackened division (!)
	* About dialog

2003-08-14  Niklas Knutsson  <nq@altern.org>

	* Fix loading of argument names for builtin functions
	* Do not add argument names in code for builtin functions, read from definitions file instead
	* Fix crash when creating new unit
	* Disable OK button for editing global definitions until structure is sorted out
	* Beautify dialogs
	* Functions, variables and units buttons in main window
	* Sorting menus
	* Tree lists implemented for units, variables and functions dialogs
	* Submenus implemented for unit, variable and function menus